[gd_scene load_steps=13 format=3 uid="uid://bwb1sm8j0jt65"]

[ext_resource type="Script" path="res://Scripts/game_over.gd" id="1_12jxm"]
[ext_resource type="FontFile" uid="uid://m2ue0rvjh2jl" path="res://Fonts/ThaleahFat.ttf" id="2_oicef"]
[ext_resource type="Texture2D" uid="uid://5eoptfmqm4n3" path="res://Sprites/Buttons/restart-normal Sheet.png" id="3_6o85n"]
[ext_resource type="Texture2D" uid="uid://copt4suf53jdf" path="res://Sprites/Buttons/restart-click Sheet.png" id="4_2bjup"]
[ext_resource type="Texture2D" uid="uid://b4e38k5uo10ku" path="res://Sprites/Buttons/restart-hover Sheet.png" id="5_yox6y"]
[ext_resource type="Texture2D" uid="uid://dxs3f5l4gvwjp" path="res://Sprites/Buttons/exit level-normal Sheet.png" id="6_kxqmi"]
[ext_resource type="Texture2D" uid="uid://gmut13hn3x6n" path="res://Sprites/Buttons/exit level-click Sheet.png" id="7_mwsut"]
[ext_resource type="Texture2D" uid="uid://c1pr4v84uu62o" path="res://Sprites/Buttons/exit level-hover Sheet.png" id="8_by3o2"]

[sub_resource type="Animation" id="Animation_ktq1x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_krsud"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_oy7d7"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rhbxn"]
_data = {
"RESET": SubResource("Animation_ktq1x"),
"fade_in": SubResource("Animation_krsud"),
"fade_out": SubResource("Animation_oy7d7")
}

[node name="Game_Over" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_12jxm")

[node name="Panel" type="Panel" parent="."]
modulate = Color(0.729412, 0.811765, 1, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
offset_left = 338.0
offset_top = 109.0
offset_right = 802.0
offset_bottom = 216.0
theme_override_fonts/font = ExtResource("2_oicef")
theme_override_font_sizes/font_size = 72
text = "RIP skill issue"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.0
offset_top = -32.0
offset_right = 269.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Retry" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(384, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_6o85n")
texture_pressed = ExtResource("4_2bjup")
texture_hover = ExtResource("5_yox6y")
ignore_texture_size = true
stretch_mode = 4

[node name="Exit" type="TextureButton" parent="VBoxContainer"]
process_mode = 2
custom_minimum_size = Vector2(384, 48)
layout_mode = 2
texture_normal = ExtResource("6_kxqmi")
texture_pressed = ExtResource("7_mwsut")
texture_hover = ExtResource("8_by3o2")
ignore_texture_size = true
stretch_mode = 4

[node name="Transition" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rhbxn")
}

[node name="ColorRect" type="ColorRect" parent="Transition"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="VBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="animation_finished" from="Transition" to="." method="_on_transition_animation_finished"]
